2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c: Update code to copy to clipboard as enhanced
	metafile, add Ctrl+C shortcut for graph window.
	
	* term/win.trm: Update documentation accordingly.

2010-02-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_obj): Sanity check start and end angles of arc.

2010-02-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Amazingly old bug that fails to apply
	absolute boxwidth in the case where previous point was undefined.

2010-02-08  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:
	Monochrome option of win terminal seems to have no effect.
	    set term win mono
	    plot x
	draws a red line. I think the timing of calling ReadGraphini() is not
	correct. This should be done only once on first entry before setting
	the terminal options.

2010-02-07  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Clarify the documentation for xticlabels().

2010-02-07  Christoph Junghans (ottxor)

	* configure.in share/Makefile.am src/Makefile.am src/gplt_x11.c
	src/variable.c: Configurable X11 application resource path.
	Bug #2931287 #219323

2010-02-03  Christoph Junghans (ottxor)

	* share/LaTeX/Makefile.am: Fix a logic error in testing the need
	to call texhash.

2010-02-03  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/command.c (pause_command): Loop of waitforinput() for "pause -1"
	in console mode of Windows.

2010-02-02  Christoph Junghans (ottxor)

	* configure.in share/LaTeX/Makefile.am:
	kpsexpand was used in share/LaTeX/Makefile.am even if it was not
	installed.  Add --texdir=DIR option to configure
	Bug #2934829

2010-02-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/syscfg.h: Attempt to fix build problem under Sun Studio (no
	definition for _Bool).
	Bug #2915835

2010-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm: Fix typo in javascript output.